--- a/index.html
+++ b/index.html
@@ -1,33 +1,27 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="ja">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
     <title>TOEIC 700 Reading Master</title>
+
+    <!-- Tailwind CDN（任意。使わないなら削除可） -->
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <style>
-      body {
-        font-family: 'Roboto', 'Noto Sans JP', sans-serif;
-      }
-    </style>
-  <script type="importmap">
-{
-  "imports": {
-    "react/": "https://esm.sh/react@^19.1.1/",
-    "react": "https://esm.sh/react@^19.1.1",
-    "react-dom/": "https://esm.sh/react-dom@^19.1.1/",
-    "@google/genai": "https://esm.sh/@google/genai@^1.13.0"
-  }
-}
-</script>
-<link rel="stylesheet" href="/index.css">
-</head>
+
+    <!-- Viteが生成するCSS（存在しなくてもエラーにはなりません） -->
+    <link rel="stylesheet" href="/index.css" />
+  </head>
   <body class="bg-slate-100">
+    <!-- ★ ここにReactが描画されます -->
     <div id="root"></div>
+
+    <!-- ★ あなたの構成に合わせて。今のリポジトリは index.tsx がルート直下なのでこれでOK -->
     <script type="module" src="/index.tsx"></script>
+
+    <!--
+      もし later で Vite標準の src/main.tsx 構成に変える場合は、上の1行を
+      <script type="module" src="/src/main.tsx"></script>
+      に変更してください。
+    -->
   </body>
 </html>
